# 3D-multiplayer-game

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile_win_cross  README.md  cross_build.sh  cross_compile_docker_build.sh  cross_compile_docker_run.sh  docker_build.sh  docker_run.sh  only_server.sh  r3d.cmake  raylib_assert.patch  rebuild.sh
assets/: assets  box_crate.glb  oak.glb  palm_tree_realistic.glb
assets/shaders/: fisheye.glsl  vignette.glsl
cmake/: headless.cmake  mingw-w64-x86_64.cmake  r3d.cmake  r3d_patch.cmake  regular.cmake  shared.cmake
src/: Actor.hpp  ActorRender.hpp  Audio.hpp  Chat.hpp  Constants.hpp  Deserialization.hpp  FixWinConflicts.hpp  Game.cpp  Game.hpp  GameBase.hpp  GameClient.hpp  GameDrawingData.hpp  GameMetadata.cpp  GameMetadata.hpp  GameServer.hpp  GameStandalone.hpp  MenusUI.cpp  MenusUI.hpp  Physics.cpp  Physics.hpp  Rendering.cpp  Rendering.hpp  ResourceData.cpp  ResourceData.hpp  Resources.cpp  Resources.hpp  Scene.hpp  SceneManager.hpp  Serialization.hpp  Settings.cpp  Settings.hpp  SoundPro.cpp  SoundPro.hpp  SpaceActorPartitioner.cpp  SpaceActorPartitioner.hpp  SpacePartition.cpp  SpacePartition.hpp  StaticWorld.cpp  StaticWorld.hpp  TextHelper.hpp  (+9 more)
src/Scenes/: Desert.cpp  Desert.hpp  Forest.cpp  Forest.hpp  Green.cpp  Green.hpp  SceneRegular.cpp  SceneRegular.hpp
